--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,12 @@
-def VERSION = '1.3'
+def VERSION = '1.8.0'
 def ARTIFACT_ID = 'common-crypto'
 def GROUP_ID = 'top.jfunc.common'
 def TYPE = 'jar'
 def DESCRIPTION = 'encrypt,decrypt interface implements by symmetric,asymmetric,digester'
 def gitUrl = 'https://gitee.com/xxssyyyyssxx/common-crypto.git'
 def siteUrl = 'https://gitee.com/xxssyyyyssxx/common-crypto'
+def REPO_NAME = 'maven'
+
 
 group GROUP_ID
 version VERSION
@@ -36,7 +38,7 @@ repositories {
     mavenCentral()
 }
 dependencies {
-    compile group: 'top.jfunc.common', name: 'utils', version: '1.3'
+    compile group: 'top.jfunc.common', name: 'utils', version: '1.8.0'
 
     testCompile group: 'junit', name: 'junit', version: '4.12'
     testCompile group: 'org.hamcrest' , name: 'hamcrest-core',version: '1.3'
@@ -154,7 +156,7 @@ bintray {
 
     configurations = ['archives']
     pkg {
-        repo = "maven"
+        repo = REPO_NAME
         name = ARTIFACT_ID //项目名称
         websiteUrl = siteUrl
         vcsUrl = gitUrl
